# gamingandventures

./: .gitmodules  CMakeLists.txt  README.md  notes.txt
balls1/: CMakeLists.txt  main.cc
balls1/ecs/: ecs.hh
balls1/tests/: ecs_test.cc
glad/: CMakeLists.txt
hordetest/: CMakeLists.txt  hordeTest.cc
hordetest/include/: horde3d
hordetest/resources/: forward.pipeline.xml  globalSettings.material.xml  model.shader  postHDR.material.xml  postHDR.shader  sphere.scene.xml  stones.material.xml
libs/: CMakeLists.txt
libs/ecs/: CMakeLists.txt  component_type.hh  ecs.cc  ecs.hh  visitor.cc  visitor.hh
libs/rendering/: CMakeLists.txt  camera.cc  camera.hh  components.cc  components.hh  framebuffer.cc  framebuffer.hh  mesh.cc  mesh.hh  mesh_manager.cc  mesh_manager.hh  mesh_utilities.cc  mesh_utilities.hh  pvc_mesh.cc  pvc_mesh.hh  renderer.cc  renderer.hh  rendering_system.cc  rendering_system.hh  shader.cc  shader.hh  shader_manager.cc  shader_manager.hh  single_point_light_phong_material.cc  single_point_light_phong_material.hh  single_point_light_solid_phong_material.cc  single_point_light_solid_phong_material.hh  texture.cc  texture.hh  texture_manager.cc  texture_manager.hh
libs/utils/: CMakeLists.txt  io.cc  io.hh  window.cc  window.hh
opengl/: CMakeLists.txt  io.cc  io.hh  main.cc  mesh.cc  mesh.hh  mesh_utilities.cc  mesh_utilities.hh  shader.cc  shader.hh  single_point_light_phong_material.cc  single_point_light_phong_material.hh  single_point_light_solid_phong_material.cc  single_point_light_solid_phong_material.hh  texture.cc  texture.hh  window.cc  window.hh
opengl/glad/: CMakeLists.txt  glad.c  glad.h
opengl/shaders/: pvc_trans.frag  pvc_trans.vert  single_light_phong.frag  single_light_phong.vert  single_light_solid_phong.frag  single_light_solid_phong.vert  single_point_light_solid_phongmaterial.cc  single_point_light_solid_phongmaterial.hh  solid.frag
opengl2/: CMakeLists.txt  components.hh  input_system.cc  input_system.hh  main.cc  main_window.cc  main_window.hh  mesh.cc  mesh.hh  pvc_mesh.hh  rednering_system.cc  rednering_system.hh  rendering_system.cc  rendering_system.hh  shader.cc  shader.hh  single_point_light_phong_material.cc  single_point_light_phong_material.hh  single_point_light_solid_phong_material.cc  texture.cc
opengl2/ecs/: CMakeLists.txt  component_type.cc  component_type.hh  ecs.cc  ecs.hh  visitor.hh
opengl2/glad/include/glad/: glad.h
opengl2/glad/src/: glad.c
opengl2/shaders/: per_vertex_color.frag  single_light_phong.frag  solid.vert
opengl2/tests/: ecs_test.cc
shaders/: per_vertex_color.vert  pvc_trans.vert  single_light_phong.frag  single_light_solid_phong.frag  skybox.vert
tests/: CMakeLists.txt  ecs_test.cc
